--- a/test-output/old/Functional Suite/groups.html
+++ b/test-output/old/Functional Suite/groups.html
@@ -1,5 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>bvt</td><td>TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@d737b89]<br/></td></tr>
-<tr><td>functional</td><td>TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@7d0b7e3c]<br/>TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@7d0b7e3c]<br/></td></tr>
-<tr><td>smoke</td><td>TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@742ff096]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>bvt</td><td>TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@75437611]<br/></td></tr>
+<tr><td>functional</td><td>TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@75437611]<br/>TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@6e6f2380]<br/>TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@75437611]<br/>TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@6e6f2380]<br/>TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@75437611]<br/></td></tr>
+<tr><td>smoke</td><td>TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@75437611]<br/>TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@3a7442c7]<br/>TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@75437611]<br/>TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@75437611]<br/></td></tr>
 </table>
